Fix: Mobile menu spacing fixes and height issues #1 Feature: TOC index follows page scroll #2 Refactor: toc.js now uses const instead of var

--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,7 @@
     border: 0 none;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .hidden { display: none !important; }
@@ -149,6 +150,13 @@ body {
    background-repeat: none;
    background-size: cover;
    height: 15rem;
+}
+
+@media (max-width: 767px) {
+    #page-title {
+        background-size: auto 130%;
+        height: 10rem;
+    }
 }
 
 #page-title h1 {
@@ -357,7 +365,7 @@ article {
     #main { padding: 2em 0 1em; }
 
     #title, #logo { padding: 2em 1.5em 2em 0; }
-    #logo { height: 8.8em; }
+    #logo { min-height: 6.8em; }
 
     #nav {
         clear: both;
@@ -376,6 +384,11 @@ article {
         padding: 0.5em 0;
     }
 
+    article {
+        padding: 1.2rem 0.6rem;
+        line-height: 2.1;
+    }
+
     .js #nav-toggle {
         display: block;
         margin: 0.6667em 0;
@@ -383,7 +396,7 @@ article {
         line-height: 2em;
         text-align: center;
         cursor: pointer;
-        margin-block-start: 5rem;
+        margin-block-start: 2rem;
         margin-inline-start: 1rem;
     }
     .js #nav-toggle .icon-menu {
@@ -631,9 +644,29 @@ input::-moz-focus-inner, button::-moz-focus-inner {
     display: flex;
 }
 
+aside {
+    flex-grow: 1;
+    flex-basis: 300px;
+    align-self: start;
+    position: sticky;
+    top: 2em;
+}
+
+@media (max-width: 767px) {
+    aside {    
+        position: relative;
+        order: -1;
+    }
+}
+
+.page-toc {
+    max-height: calc(100vh - var(--offset) * 2);
+}
+
 #page-toc-container {
     list-style: none;
-    width: 16rem;
+    width: 14.5rem;
+    padding-left: 2.5rem;
 }
 
 #page-toc-container li a {
@@ -649,10 +682,6 @@ input::-moz-focus-inner, button::-moz-focus-inner {
 @media (max-width: 767px) {
     .page-content {
         flex-direction: column;
-    }
-
-    .page-content aside {
-        order: -1;
     }
 
     .page-content #page-toc-container {
